# Strife

./: .gitignore  CMakeLists.txt  README.md
client/: main.cpp
server/: main.cpp
